# sgc_python_sdk

./: README.md  __init__.py  pyproject.toml  test_sdk.py
api/: __init__.py
api/reseller/: __init__.py  sgc_credit_management.py  sgc_user.py
api/sms/: __init__.py  sgc_schedule.py  sgc_sms_send.py
api/user/: __init__.py  sgc_account.py  sgc_apikey.py  sgc_contact.py  sgc_group.py  sgc_password.py  sgc_senderid.py
config/common/: __init__.py  sgc_common_api_params.py  sgc_constant.py
config/reseller/: sgc_reseller_credit_management_api_params.py  sgc_reseller_user_api_params.py
config/sms/: sgc_sms_schedule_api_params.py  sgc_sms_send_api_params.py
config/user/: sgc_user_account_api_params.py  sgc_user_contact_api_params.py  sgc_user_group_api_params.py  sgc_user_password_api_params.py  sgc_user_senderId_api_params.py
lib/: __init__.py  sgc_callapi.py
object/: __init__.py
object/common/: __init__.py  sgc_auth.py
object/reseller/: __init__.py  sgc_reseller.py
object/sms/: __init__.py  sgc_sms.py
object/user/: __init__.py  sgc_user.py
