[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgc-python-sdk"
version = "1.0.0"
description = "Python client for SGC (SMS Gateway Center) API. Send SMS, manage account, sender IDs, schedules. Works with Unify SMS Gateway Center."
readme = "README.md"
license = { text = "GPL-2.0" }
requires-python = ">=3.7"
authors = [
    { name = "SMS Gateway Center" }
]
keywords = ["sms", "smsgateway", "sgc", "api", "unify"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/smsgatewaycenter/sgc_python_sdk"
Documentation = "https://github.com/smsgatewaycenter/sgc_python_sdk#readme"
Repository = "https://github.com/smsgatewaycenter/sgc_python_sdk"

# Flat layout: repo root (this dir) is the package sgc_python_sdk
[tool.setuptools.package-dir]
sgc_python_sdk = "."

[tool.setuptools.packages]
# Explicit list so "." and all subpackages install as sgc_python_sdk.*
packages = [
    "sgc_python_sdk",
    "sgc_python_sdk.api",
    "sgc_python_sdk.api.sms",
    "sgc_python_sdk.api.user",
    "sgc_python_sdk.api.reseller",
    "sgc_python_sdk.config",
    "sgc_python_sdk.config.common",
    "sgc_python_sdk.config.sms",
    "sgc_python_sdk.config.user",
    "sgc_python_sdk.config.reseller",
    "sgc_python_sdk.lib",
    "sgc_python_sdk.object",
    "sgc_python_sdk.object.common",
    "sgc_python_sdk.object.sms",
    "sgc_python_sdk.object.user",
    "sgc_python_sdk.object.reseller",
]
